clusters/main/kubernetes/system/networkpolicies/app/gatus-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway
  namespace: gatus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: gatus
      app.kubernetes.io/name: gatus
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
